--- a/set.html
+++ b/set.html
@@ -43,8 +43,10 @@ ac_add_style(".anychart-embed-samples-bct-bubble-chart-01{width:800px;height:600
     </div>
 <hr>
     <h2 style="margin-left: 40px;">Original Comments</h2>
+    <div style="margin-left: 40px;">
+    ID denotes the i-th comment's j-th sentence. For example, 1-1 means the 1st comment's 1st sentence.</div>
 <div class="py-3" style="margin-left: 40px; height:600px; overflow-y: auto" id="comments">
-<table class="table table-striped"> <thead><tr><th scope="col" style="width: 100px">ID</th><th scope="col">Comment</th></tr></thead><tbody><tr> <td>1-1</td> <td>I thoroughly enjoyed this course, Dr Lowery's instructio
+<table class="table table-striped"> <thead><tr><th scope="col" style="width: 100px">ID</th><th scope="col">Comment Sentence</th></tr></thead><tbody><tr> <td>1-1</td> <td>I thoroughly enjoyed this course, Dr Lowery's instructio
 n, and my fellow classmates.</td></tr> <tr> <td>2-1</td> <td>I loved this course!</td></tr> <tr> <td>2-2</td> <td>I learned so much about Native American history and it's
  implications today on our current society.</td></tr> <tr> <td>2-3</td> <td>It really opened my eyes to the mistreatment of Natives
 as well as other minority groups, and the possibilities
@@ -136,7 +138,7 @@ ail before the midterm.</td></tr> <tr> <td>16-2</td> <td>This course is excellen
     <div id="query_container"></div>
     <h2 style="margin-left: 40px;"><span style="color: green">Query-based</span> Summarization of Comments</h2>
     <div style="margin-left: 40px;">
-        We extract 5 comment sentences of the top 5 centrality as an <strong>extractive summary</strong> of student comments.
+        We extract 5 comment sentences of the top 5 centrality*similarity-to-query as an <strong>extractive summary</strong> of student comments.
     </div>
     <div class="py-3" style="margin-left: 40px; height:600px; overflow-y: auto" id="query_summary">
     <table class="table table-striped"> <thead><tr><th scope="col" style="width: 100px">ID</th><th scope="col">Comment</th></tr></thead><tbody><tr> <td>4-1</td> <td>One of the worst classes I've ever taken.</td></tr> <tr> <td>8-3</td> <td>I realize Professor Lowery wanted a myriad of opinions a
